[tool.poetry]
name = "pyfony-sqlalchemy-bundle"
version = "1.0.0"
description = "SQL Alchemy bundle for the Pyfony framework"
readme = "README.md"
repository = "https://github.com/pyfony/pyfony-sqlalchemy-bundle"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml"]

packages = [
    { include = "sqlalchemybundle", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
pyfony-bundles = "0.4.*"
SQLAlchemy = "^1.3"
console-bundle = "^0.5"
Werkzeug = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-fixme = "^1.1.1"
pep8-naming = "^0.11.1"
poethepoet = "^0.10.0"
pyfony-core = "0.8.*"

[tool.poetry.plugins."pyfony.bundle"]
create = "sqlalchemybundle.SqlAlchemyBundle:SqlAlchemyBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "sqlalchemybundle"

[tool.black]
line-length = 140

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
flake8 = "flake8 --ignore=E501,W503 src"
